[package]
name = "deeplynx-loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "deeplynx_loader"
crate-type = ["cdylib"]

[dependencies]
duckdb = { version = "0.7.1", features = ["bundled"]}
pyo3 = {version = "0.18.1", features = ["generate-import-lib", "extension-module", "abi3", "abi3-py311", "abi3-py39", "abi3-py38", "abi3-py37", "abi3-py310"]}
serde = { version = "1.0.145", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0.94"
thiserror = "1.0.38"
anyhow = "1.0.69"
chrono = "0.4.24"
ureq = { version = "2.6.2", features = ["json"] }
jwt = "0.16.0"
env_logger = "0.10.0"
log = { version = "0.4.17", features = ["max_level_trace", "release_max_level_debug"] }
fs2 = "0.4.3"
new_mime_guess = "4.0.1"
multipart = "0.18.0"
fern = "0.6.1"

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]